<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_group"
            android:icon="@drawable/ic_baseline_groups_2_24"
            android:title="@string/menu_create_group" />
        <item
            android:id="@+id/nav_add_member_to_group"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="@string/menu_add_member_to_group"/>
        <item
            android:id="@+id/nav_create_message"
            android:icon="@drawable/ic_baseline_textsms_24"
            android:title="@string/menu_create_message" />
        <item
            android:id="@+id/nav_send_message"
            android:icon="@drawable/ic_baseline_send_24"
            android:title="@string/menu_send_message" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>